<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listitem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_color" >

    <LinearLayout
        android:id="@+id/ws"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium" >

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/test_store_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView_addr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/padding_small"
            android:layout_marginTop="@dimen/padding_small"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/test_addr"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/fontGray" />

        <LinearLayout
            android:id="@+id/ds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_medium"
                android:layout_weight="1"
                android:text="@string/test_km"
                android:textColor="@color/sub_color"
                android:textSize="@dimen/fontText_mini"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textView_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/padding_small"
                android:text="@string/test_tel"
                android:textColor="@color/fontGray"
                android:textSize="@dimen/fontText_mini" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ws"
        android:baselineAligned="false"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/button_tel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/grid"
            android:layout_weight="1"
            android:background="@drawable/btn_sub_color"
            android:clickable="true"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/padding_small"
                android:layout_toLeftOf="@+id/txt_tel"
                android:contentDescription="@string/img_decoration"
                android:duplicateParentState="true"
                android:src="@drawable/icon_phone" />

            <TextView
                android:id="@+id/txt_tel"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true"
                android:duplicateParentState="true"
                android:gravity="center_vertical"
                android:text="@string/callout"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white_color" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button_gps"
            android:layout_width="match_parent"
            android:layout_height="@dimen/grid"
            android:layout_weight="1"
            android:background="@drawable/btn_trd_color"
            android:clickable="true" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/padding_small"
                android:layout_toLeftOf="@+id/txt_gps"
                android:contentDescription="@string/img_decoration"
                android:duplicateParentState="true"
                android:src="@drawable/icon_gps" />

            <TextView
                android:id="@+id/txt_gps"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true"
                android:duplicateParentState="true"
                android:gravity="center_vertical"
                android:text="@string/navigation"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white_color" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>